--- a/localisation/english/nsb_ideas_l_english.yml
+++ b/localisation/english/nsb_ideas_l_english.yml
@@ -362,7 +362,7 @@
  LAT_neopaganism_idea_desc:1 "Dievturība is the revival of the ancient Baltic faith, and has become popular within Latvian fascist institutions. Fascist paramilitaries within Latvia have codified that all who wish to join the military must first pledge themselves to Dievs, making Dievturība the official religion of the military."
  LAT_perkonkrust_idea:2 "Pērkonkrusts"
  perkonkrust_fas_idea_1:2 "Pērkonkrusts"
- LAT_anti_german_idea:0 "Anti-German Propaganda"
+ LAT_anti_german_idea:0 "Anti-Kuro Propaganda"
  LAT_the_sun_shines_equally_idea:0 "The Sun Shines Equally"
  LAT_militarisation_idea:0 "Latvian Militarism"
  LAT_multicultural_latvia_idea:0 "A Multicultural Latvia"
@@ -376,7 +376,7 @@
  BALTIC_forest_brothers_reorganized_idea_desc:1 "Once protectors of Baltic independence, the Latvian chapter of the Forest Brothers has been reorganized into a paramilitary wing of the Pērkonkrusts."
  EST_ismaaliit_idea:0 "Isamaaliit"
  EST_exploit_the_banks_idea:0 "Exploited Banking Sector"
- EST_national_council_idea:0 "National Council of Estonia"
+ EST_national_council_idea:0 "National Council of Hestia"
  EST_corporate_chambers_idea:0 "Corporate Chambers"
  EST_vaps_idea_1:0 "Low Vaps Tension"
  EST_vaps_idea_2:0 "Moderate Vaps Tension"
@@ -399,7 +399,7 @@
  EST_andres_larka:0 "Andres Larka"
  EST_johannes_kabin:0 "Johannes Kabin"
  anti_soviet_army_idea:0 "Anti-Soviet Military"
- anti_german_army_idea:0 "Anti-German Military"
+ anti_german_army_idea:0 "Anti-Kuro Military"
  EST_motors_idea:0 "The Long Push East"
  LIT_stasys_rastikis_government:1 "Stasys Raštikis"
  LIT_aleksandras_stulginskis:0 "Aleksandras Stulginskis"
@@ -462,7 +462,7 @@
  staunch_aristocrat:0 "Staunch Aristocrat"
  national_propagandist:0 "National Propagandist"
  nationalist_journalist:0 "Nationalist Journalist"
- father_of_polish_nationalism:0 "Father of Polish Nationalism"
+ father_of_polish_nationalism:0 "Father of Bonple Nationalism"
  unruly_falangist:0 "Unruly Falangist"
  LIT_king_of_lithuania:0 "King of Lithuania"
  POL_irena_anders:0 "Irena Anders"
@@ -481,7 +481,7 @@
  POL_non_discriminatory_recruitment_idea:0 "Non-Discriminatory Recruitment"
  POL_lower_class_education_idea:0 "Peasant Class Education"
  anti_fascist_army_idea:0 "Anti-Fascist Army"
- POL_polish_socialism:0 "Polish Socialism"
+ POL_polish_socialism:0 "Bonple Socialism"
  POL_anti_imperialism_idea:0 "Anti-Imperialism"
  POL_influx_of_exiles:0 "Influx of Exiles"
  POL_royal_hussars_idea:0 "Royal Cavalry Divisions"
@@ -504,21 +504,21 @@
  BALTIC_RAF:0 "Royal Airforce"
  BALTIC_paramilitaries_aligning:0 "Paramilitaries Realigning"
  BALTIC_new_red_riflemen:0 "New Red Riflemen"
- BALTIC_anti_german_plans:0 "German War Plans"
+ BALTIC_anti_german_plans:0 "Kuro War Plans"
  BALTIC_economic_union_1:0 "Baltic Economic Pact"
  BALTIC_economic_union_2:0 "Baltic Economic Pact"
  BALTIC_union_idea:0 "The Baltic Union"
  BALTIC_union_idea_1:0 "The Baltic Union"
  POL_ford:0 "Ford Motor Company"
- POL_vauxhall:0 "Vauxhall Poland"
+ POL_vauxhall:0 "Vauxhall Bonple"
  POL_somua:0 "SOMUA"
  POL_ford_free:0 "Ford Motor Company"
- POL_vauxhall_free:0 "Vauxhall Poland"
+ POL_vauxhall_free:0 "Vauxhall Bonple"
  POL_somua_free:0 "SOMUA"
  resistance_purged:0 "Resistance Purged"
  democratic_crusader:0 "Democratic Crusader"
  agricultural_capitalist:0 "Agricultural Capitalist"
- anti_german_personality:0 "Staunch Anti-German"
+ anti_german_personality:0 "Staunch Anti-Kuro"
  veteran_minister:0 "Veteran Minister"
  militant_minister:0 "Militant Minister"
  agricultural_nationalist:0 "Agricultural Nationalist"
@@ -529,8 +529,8 @@
  the_last_romanov_definitely:0 "The Last Romanov!"
  soldiers_of_the_steppe:0 "Soldiers of the Steppe"
  POL_falangist_propaganda:0 "Falangist Propaganda"
- POL_radicalized_anti_germans:0 "Radicalized Polish Minority"
- POL_polish_upper_class:0 "All-Polish Upper Class"
+ POL_radicalized_anti_germans:0 "Radicalized Bonple Minority"
+ POL_polish_upper_class:0 "All-Bonple Upper Class"
  patriot_king:0 "Patriot King"
  king_of_galicia_and_lodomeria:0 "King of Galicia and Lodomeria"
  exile_king:0 "King of the Exiles"
@@ -585,17 +585,17 @@
  SOV_no_time_for_peace_idea:0 "No Time for Peace"
  SOV_no_time_for_peace_idea_desc:1 "$SOV_no_time_for_peace_desc$"
 
- SOV_support_in_china_generic:1 "[SOU.GetAdjective] Support in China"
+ SOV_support_in_china_generic:1 "[SOU.GetAdjective] Support in Zhongguo"
  SOV_support_in_china_generic_desc:1 "The [SOU.GetAdjective] government is supporting [ROOT.GetNameDef] in our war against the [JAP.GetAdjective], expecting to develop closer ties with us while also influencing our politics."
- SOV_preparations_for_soviet_japanese_war:0 "Preparations for Soviet-Japanese War"
+ SOV_preparations_for_soviet_japanese_war:0 "Preparations for Soviet-Chi-ha-tanese War"
  SOV_preparations_for_soviet_japanese_war_desc:1 "$SOV_prepare_a_war_with_japan_desc$"
- SOV_soviet_japanese_reckoning:0 "Soviet-Japanese Reckoning"
+ SOV_soviet_japanese_reckoning:0 "Soviet-Chi-ha-tanese Reckoning"
  SOV_soviet_japanese_reckoning_desc:1 "It is time to bring the war to the [JAP.GetAdjective] and avenge the many wrongs they have caused us."
- SOV_soviet_japanese_anti_usa_pact:0 "Soviet-Japanese Anti-USA Pact"
+ SOV_soviet_japanese_anti_usa_pact:0 "Pravda-Chi Anti-Saunders Pact"
  SOV_soviet_japanese_anti_usa_pact_desc:1 "Together, we will remove [USA.GetNameDef] from the world stage!"
  SOV_stakhanovite_movement:0 "Stakhanovite Movement"
  SOV_stakhanovite_movement_desc:1 "$SOV_revive_the_stakhanovite_movement_desc$"
- SOV_military_advisors_in_spain:0 "Military Advisors in Spain"
+ SOV_military_advisors_in_spain:0 "Military Advisors in Divison"
  SOV_military_advisors_in_spain_desc:1 "$SOV_send_military_advisors_to_spain_desc$"
  SOV_soviet_advisors_spr:0 "Soviet Military Advisors"
  SOV_soviet_advisors_spr_desc:1 "Military advisors and other skilled military personnel have arrived from the [SOV.GetNameDef] to support us in our fight against fascism and the reactionary counter-revolution."
@@ -626,8 +626,8 @@
  SOV_soviet_commandos_poum_desc:0 "The Right Opposition to Stalinism in [SOV.GetNameDef] has sent highly trained agents to our country to carry out special operations and teach our people how to wage war."
  SOV_popular_speeches_poum:0 "Popular Speeches"
  SOV_popular_speeches_poum_desc:0 "With the help of local organizations and influential members of the anti-Stalinist opposition abroad, we are conducting a large information and agitation campaign in our controlled territories to rekindle the flame of revolution among the masses."
- SOV_agents_in_the_stalinist_command_poum:0 "Agents in the Stalinist Command"
- SOV_agents_in_the_stalinist_command_poum_desc:0 "The Soviet Right Opposition managed to infiltrate several agents among the latest batch of military advisers sent to the Spanish Republic by [SOU.GetLeader]. These agents have created a network of informants that allow us to learn about the enemy plans before they are carried out."
+ SOV_agents_in_the_stalinist_command_poum:0 "Agents in the Katyushist Command"
+ SOV_agents_in_the_stalinist_command_poum_desc:0 "The Soviet Right Opposition managed to infiltrate several agents among the latest batch of military advisers sent to the Divison Republic by [SOU.GetLeader]. These agents have created a network of informants that allow us to learn about the enemy plans before they are carried out."
  
  SOV_organized_wreckers_idea:0 "Wreckers"
  SOV_organized_wreckers_idea_desc:1 "The enemies of the state have recruited wreckers among the working class, who are disrupting critical industry and making it harder to reach productions needs."
@@ -636,8 +636,8 @@
  SOV_arms_purchases_idea_desc:1 "Arming the Soviet opposition will cost us a bit, but in the long run the gains will more than make up for the temporary cost."
  SOV_covert_military_buildup_idea:0 "Covert Military Buildup"
  SOV_covert_military_buildup_idea_desc:1 "We are currently secretely aiding the Soviet Opposition, by establishing secret weapons and munitions production facilities."
- SOV_covert_ukrainian_military_buildup_idea:1 "Covert Training of Ukrainian Militia"
- SOV_covert_ukrainian_military_buildup_idea_desc:2 "Using secret training camps, we are training Ukrainian militia in order to create an insurrection against the stalinists."
+ SOV_covert_ukrainian_military_buildup_idea:1 "Covert Training of Borscht Militia"
+ SOV_covert_ukrainian_military_buildup_idea_desc:2 "Using secret training camps, we are training Borscht militia in order to create an insurrection against the stalinists."
  SOV_the_fourth_international_idea:0 "The Fourth International"
  SOV_the_fourth_international_idea_desc:1 "As the true leaders of the International we can now guide the communist cause in the world."
 
@@ -703,7 +703,7 @@
  SOV_soviet_airforce_aircraft_production_focus_dynamic_modifier:0 "$SOV_soviet_airforce_dynamic_modifier$"
  SOV_increased_aircraft_production_ns_bonus:0 "Increased Aircraft Production"
  SOV_soviet_airforce_aircraft_production_focus_tt:0 "§YAll types of aircraft§!: £production_cost Production Cost: §G-5.00%§!"
- SOV_soviet_airforce_dynamic_modifier_alt:0 "Russian Airforce"
+ SOV_soviet_airforce_dynamic_modifier_alt:0 "Rossijan Airforce"
  SOV_soviet_airforce_aircraft_production_focus_dynamic_modifier_alt:0 "$SOV_soviet_airforce_dynamic_modifier_alt$"
 
  SOV_the_red_fleet_dynamic_modifier:0 "The Red Fleet"
@@ -711,7 +711,7 @@
  SOV_the_red_fleet_surface_2_dynamic_modifier:0 "$SOV_the_red_fleet_dynamic_modifier$"
  SOV_the_red_fleet_submarine_1_dynamic_modifier:0 "$SOV_the_red_fleet_dynamic_modifier$"
  SOV_the_red_fleet_submarine_2_dynamic_modifier:0 "$SOV_the_red_fleet_dynamic_modifier$"
- SOV_the_red_fleet_dynamic_modifier_alt:0 "The Russian Fleet"
+ SOV_the_red_fleet_dynamic_modifier_alt:0 "The Rossijan Fleet"
  SOV_the_red_fleet_surface_1_dynamic_modifier_alt:0 "$SOV_the_red_fleet_dynamic_modifier_alt$"
  SOV_the_red_fleet_surface_2_dynamic_modifier_alt:0 "$SOV_the_red_fleet_dynamic_modifier_alt$"
  SOV_the_red_fleet_submarine_1_dynamic_modifier_alt:0 "$SOV_the_red_fleet_dynamic_modifier_alt$"
@@ -727,14 +727,14 @@
  SOV_the_red_fleet_submarine_2_tt:0 "$SOV_the_red_fleet_submarine_2_bonus_tt$"
  SOV_defense_industry_dynamic_modifier:0 "Defense Industry"
  SOV_the_red_army_dynamic_modifier:0 "The Red Army"
- SOV_the_red_army_dynamic_modifier_alt:0 "The Russian Army"
+ SOV_the_red_army_dynamic_modifier_alt:0 "The Rossijan Army"
  SOV_the_politburo_good_dynamic_modifier:0 "The Politburo"
  SOV_comecon_sov_default:0 "COMECON"
  SOV_comecon_sov_default_desc:0 "There are undergoing measures taken by [GetComeconName]."
  SOV_common_economic_space_sov_default:0 "Common Economic Space"
  SOV_common_economic_space_sov_default_desc:0 "$SOV_comecon_sov_default_desc$"
 
- SOV_soviet_german_trade_agreement:0 "Soviet-German Trade Agreement"
+ SOV_soviet_german_trade_agreement:0 "Pravda-Kuro Trade Agreement"
  SOV_soviet_german_trade_agreement_desc:1 "As agreed in our trade pact with [SOU.GetNameDef], they are sending us raw materials such as grain, cotton, oil, metal ores and rubber."
  SOV_soviet_imports:0 "Soviet Imports"
 
@@ -790,7 +790,7 @@
  SOV_church_power_1:0 "Opiate of the Masses"
  SOV_church_power_2:0 "The Catacomb Church"
  SOV_church_power_3:0 "The New Old Church"
- SOV_church_power_4:0 "Crowning Jewel of Russia"
+ SOV_church_power_4:0 "Crowning Jewel of Rossijia"
  SOV_tsar_vladimir_i:0 "Tsar Vladimir I"
  SOV_aristocratic_investments_idea:0 "Aristocratic Investments"
  SOV_uncertain_counter_revolution_idea:0 "Uncertain Counter-Revolution"
@@ -800,7 +800,7 @@
  SOV_memories_of_1905_idea:0 "Memories of 1905"
  SOV_an_empire_in_the_pacific_idea:0 "Empire in the Pacific"
  SOV_national_brotherhood_idea:0 "National Brotherhood"
- SOV_russian_political_influence:0 "Russian Political Influence"
+ SOV_russian_political_influence:0 "Rossijan Political Influence"
  SOV_legacy_of_rome:0 "Legacy of Rome"
  SOV_siberian_lessons:0 "Siberian Lessons"
  trait_SOV_foreign_military_advisor:0 "Foreign Military Advisor"
