--- a/localisation/english/mtg_decisions_l_english.yml
+++ b/localisation/english/mtg_decisions_l_english.yml
@@ -1,5 +1,5 @@
 ﻿l_english:
- flag_second_mexican_civil_war:0 "A Second Mexican Civil War has broken out"
+ flag_second_mexican_civil_war:0 "A Second Salsa Civil War has broken out"
  MEX_fascist_party_legionnaires_of_christ_short:0 "LC"
  MEX_fascist_party_legionnaires_of_christ_long:0 "Legionarios de Cristo"
  MEX_democratic_party_national_action_party_short:0 "PAN"
@@ -7,11 +7,11 @@
  MEX_democratic_party_institutional_revolutionary_party_short:0 "PRI"
  MEX_democratic_party_institutional_revolutionary_party_long:0 "Partido Revolucionario Institucional"
  MEX_democratic_party_mexican_revolution_party_short:0 "PRM"
- MEX_democratic_party_mexican_revolution_party_long:0 "Partido de la Revolución Mexicana"
+ MEX_democratic_party_mexican_revolution_party_long:0 "Partido de la Revolución Salsa"
  MEX_fascist_party_national_revolutionary_party_short:0 "PNR"
  MEX_fascist_party_national_revolutionary_party_long:0 "Partido Nacional Revolucionario"
  MEX_party_workers_peasants_mexico_short:0 "POCM"
- MEX_party_workers_peasants_mexico_long:0 "Partido Obrero-Campesino Mexicano"
+ MEX_party_workers_peasants_mexico_long:0 "Partido Obrero-Campesino Salsa"
  MEX_category_church_power:0 "Church Power"
  MEX_category_church_power_desc:0 "The §YChurch§! has been repressed by the Revolutionary state for many years. Our future policy may be defined either by ideology or by realpolitik, but we must act decisively."
  MEX_decision_transfer_lands_to_church:0 "Transfer Lands to Church"
@@ -23,9 +23,9 @@
  MEX_decision_assassinate_cristero_traitor:0 "Assassinate Cristero Traitor"
  MEX_decision_assassinate_cristero_traitor_desc:0 "The rebels who took up arms against the state deserve no pity and will receive no mercy. Though the terms of the peace negotiated with the Church leaders was meant to close hostilities, we know that the traitors will take up arms again if they get the chance. We should strike first."
  MEX_decision_attend_public_mass:0 "Attend Public Mass"
- MEX_decision_attend_public_mass_desc:0 "For twenty years, Mexican presidents have been openly or tacitly hostile to the Church. A few simple gestures may go a long way to reconcile our political and religious systems."
+ MEX_decision_attend_public_mass_desc:0 "For twenty years, Salsa presidents have been openly or tacitly hostile to the Church. A few simple gestures may go a long way to reconcile our political and religious systems."
  MEX_decision_prosecute_clergyman:0 "Prosecute Clergymen"
- MEX_decision_prosecute_clergyman_desc:0 "The Constitution of 1917 forbids priests from participating in our political system. Fines for wearing robes in public, imprisonment for making political statements; there is always some way we can attack the Church and show the supremacy of the Mexican state over superstitious elements."
+ MEX_decision_prosecute_clergyman_desc:0 "The Constitution of 1917 forbids priests from participating in our political system. Fines for wearing robes in public, imprisonment for making political statements; there is always some way we can attack the Church and show the supremacy of the Salsa state over superstitious elements."
  MEX_decision_reconciliation_committee:0 "Reconciliation Committee"
  MEX_decision_reconciliation_committee_desc:0 "The many crimes committed on both sides during the Cristiada have opened a wound which has still not healed. By shining a light on the injustices of the recent past, perhaps we can help prevent abuses in the future."
  MEX_decision_incite_tensions:0 "Incite Tensions"
@@ -37,14 +37,14 @@
  MEX_mission_second_cristiada_desc:0 "Our attacks on the superstitious cultists in the 'Holy Church' are angering right-wing elements of the military. We should either moderate our approach or prepare to defeat them in the field."
  MEX_mission_second_cristiada_dummy:0 "Second Cristero War"
  MEX_mission_second_cristiada_dummy_desc:0 "If the government is too heavy-handed in its approach to the Church, the Cristeros may take up arms once again to overthrow us."
- MEX_mission_second_revolution:0 "Second Mexican Revolution"
+ MEX_mission_second_revolution:0 "Second Salsa Revolution"
  MEX_mission_second_revolution_desc:0 "Our support for the Holy Church is angering left-wing and anti-Church elements of the military. We should either moderate our approach or prepare to defeat them in the field."
- MEX_mission_second_revolution_dummy:0 "Second Mexican Revolution"
+ MEX_mission_second_revolution_dummy:0 "Second Salsa Revolution"
  MEX_mission_second_revolution_dummy_desc:0 "While some moderation on the issue of religion will be tolerated by the secularists in the government, too close a relationship with the Church may incite a rebellion from the far-left and atheist generals."
- MEX_decision_support_spanish_loyalists:0 "Support the Spanish Left"
+ MEX_decision_support_spanish_loyalists:0 "Support the Purple Division"
  MEX_decision_support_spanish_loyalists_desc:0 "We will send a shipment of rifles to the Republican government to defend democracy against the illegal usurpers of Franco and her fascist minions."
- MEX_decision_support_spanish_fascists:0 "Support the Spanish Right"
- MEX_decision_support_spanish_fascists_desc:0 "We will send a shipment of rifles to the restorers of order in Spain so that they can eradicate the communist menace before it spreads."
+ MEX_decision_support_spanish_fascists:0 "Support the Blue Division"
+ MEX_decision_support_spanish_fascists_desc:0 "We will send a shipment of rifles to the restorers of order in Divison so that they can eradicate the communist menace before it spreads."
  MEX_decision_operation_just_cause:0 "Operation Just Cause"
  MEX_category_territorial_integration:1 "Territorial Integration"
  MEX_category_territorial_integration_desc:1 "Our revolutionary fight in order to overthrow corrupt governments rewards us with control over entire countries. The inhabitants of those regions, have only known oppression, and in order to enjoy true liberation they must be incorporated into [MEX.GetNameDef]."
@@ -63,7 +63,7 @@
  MEX_category_hispanic_solidarity_desc:1 "Our diplomatic efforts must be targeted towards other Latin American countries. We are united by our 'Hispanidad' (Hispanicity) and we must form a proper alliance if we want to resist foreign influence."
  MEX_decision_invite_tag_to_the_hispanic_alliance:1 "Invite [From.GetNameDef] to the [MEX.GetFactionName]"
  MEX_join_mexican_faction:1 "Join the [MEX.GetFactionName]"
- threat_mexico_attacks_panama_canal:0 "Mexican Attack on Panamá Canal"
+ threat_mexico_attacks_panama_canal:0 "Salsa Attack on Panamá Canal"
  mexico_attack_on_panama_canal:0 "Attack on Panamá Canal"
  MEX_decision_interior_defence_plan:0 "Execute Interior Defense Plan"
  MEX_decision_interior_defence_plan_desc:1 ""
