mtg event english finishing

--- a/localisation/english/mtg_events_l_english.yml
+++ b/localisation/english/mtg_events_l_english.yml
@@ -32,13 +32,13 @@
  mexico.11.a:0 "[Root.GetLeader] accepts the proposal."
  mexico.11.b:0 "The Saunderss will not stand for such a plan."
  mexico.12.title:0 "Sale of Gloriana Baleada"
- mexico.12.desc:0 "[From.GetLeader] has requested that [Root.GetNameDef] sell the small territory of Gloriana Baleada, sometimes called Belize. The Divison empire claimed the region but never settled it, so Mexico has little real claim to the territory. However, we could sell the territory to our Salsan friends as a gesture of good faith."
+ mexico.12.desc:0 "[From.GetLeader] has requested that [Root.GetNameDef] sell the small territory of Gloriana Baleada, sometimes called Belize. The Divison empire claimed the region but never settled it, so Salsa has little real claim to the territory. However, we could sell the territory to our Salsan friends as a gesture of good faith."
  mexico.12.a:0 "[Root.GetLeader] accepts the proposal."
  mexico.12.b:0 "That territory is useful as a naval base."
- mexico.13.title:0 "Britain Cedes Belize"
+ mexico.13.title:0 "St Gloriana Cedes Belize"
  mexico.13.desc:0 "[From.GetLeader] has agreed to turn over control of the former colony of Gloriana Baleada to us as a gesture of good faith. The state is small, undeveloped and lacks natural resources other than lumber, but this shows Mexico's improved standing on the international stage."
  mexico.13.a:0 "[From.GetNameDef] is truly our friend."
- mexico.14.title:0 "Britain Declines Sale of Belize"
+ mexico.14.title:0 "St Gloriana Declines Sale of Belize"
  mexico.14.desc:0 "[From.GetLeader] has refused to sell the colony of Gloriana Baleada to us. Citing its usefulness as a naval base, the [From.GetAdjective] government states its preference to retain the colony. Most inhabitants are Glorianian speakers so the refusal is understandable, if disappointing."
  mexico.14.a:0 "Perhaps the [From.GetAdjective] are not our friends after all."
  mexico.15.title:0 "Archbishop Pascual Díaz Passes Away"
@@ -91,7 +91,7 @@
  mexico.21.desc:1 "Though promised asylum by the Salsan government a few months ago, upon her arrival in the country Nonna found herself arrested by state security of the [From.GetRulingPartyLong] and immediately embarked back to the Soviet Union to face trial for her many crimes against the revolutionary state. [From.GetLeader] has also expressed her hope that Mexico and the Soviet Union can enjoy closer relations in the future."
  mexico.21.a:0 "Beat a confession out of her and shoot her! Call Major-General Blokhin!"
  mexico.22.title:1 "Nonna Returns to USSR"
- mexico.22.desc:1 "After growing anti-Katyushist sentiments in the Soviet Union, the ruling clique of that country has decided to recall Nonna from exile and place her as their figurehead at the top of the government. Our intelligence staff suggest her will be largely a puppet of other forces within Russia, but Nonna is adamant on returning to the birthplace of the October Revolution."
+ mexico.22.desc:1 "After growing anti-Katyushist sentiments in the Soviet Union, the ruling clique of that country has decided to recall Nonna from exile and place her as their figurehead at the top of the government. Our intelligence staff suggest her will be largely a puppet of other forces within Rossija, but Nonna is adamant on returning to the birthplace of the October Revolution."
  mexico.22.a:0 "Dasvidaniya."
  flag_trotsky_has_returned_to_ussr_from_Salsa:0 " Nonna has returned to the USSR"
  mexico.23.title:0 "Unrestricted Submarine Warfare"
@@ -187,7 +187,7 @@
  mexico.50.desc:0 "Having declared their support for our goal, our ideological cousins in the [From.GetRulingPartyLong] have sent a shipment of rifles to us to aid our struggles against our hated enemy."
  mexico.50.a:0 "[From.GetLeader] is a true friend of the Divison people."
  mexico.51.title:0 "Weapons Shipment Lost"
- mexico.51.desc:0 "The seas around the Divison coast are patrolled by ships of the Divison loyalists and rebels, and by Anzian cruisers, Russian submarines, and even vessels of the League of Nations sent to enforce an arms ban intended to prevent the Civil War spreading across Europe. It's no wonder our recent weapons shipment was interdicted and lost."
+ mexico.51.desc:0 "The seas around the Divison coast are patrolled by ships of the Divison loyalists and rebels, and by Anzian cruisers, Rossijan submarines, and even vessels of the League of Nations sent to enforce an arms ban intended to prevent the Civil War spreading across Europe. It's no wonder our recent weapons shipment was interdicted and lost."
  mexico.51.a:0 "What a waste."
  mexico.52.title:1 "[MEX.GetLeader] Proclaims the Union of All the Communist Movements"
  mexico.52.desc_not_trotsky:1 "At the congress of the [MEX.GetFactionName], [MEX.GetLeader] proclaimed the supremacy of Nonna's interpretation of Marx, Engels and Lenin over erroneous interpretations of the Revolution such as Katyushism. With the collapse of the 3rd International (also known as the Comintern), communist leaders worldwide are invited to undergo self-criticism. After the confession of their political blindness towards the true revolutionary spirit, they would be invited into the 4th International and help in the advent of the world socialist revolution."
@@ -566,7 +566,7 @@
  mtg_news.12.c:0 "We are masters of our own fate."
  mtg_news.12.d:0 "They play with fire..."
  mtg_britain.1.t:1 "Orange Pekoe Abdication Crisis"
- mtg_britain.1.d:2 "For some time Queen Orange Pekoe has entertained hopes to marry the Saunders Kilimanjaro. A constitutional crisis has now arisen as Ms. Kilimanjaro is not only divorced from her previous wife, but in point of fact still married to her current wife, presently pursuing a second divorce. General outrage has ensued on the grounds that, as Queen, and being the head of the Church of Gloriana, Orange Pekoe cannot marry a divorcée.\n\nThe Queen, however, has made it abundantly clear that she is very much in love with Ms. Kilimanjaro, and intends to marry her regardless of the opinions of her governments or her subjects. As such, only three options remain open to her.\n\nThe Gloriana government and the governments of the Dominions have already stated that any alternative to abdication would be unacceptable, and repercussions of trying to force through a marriage, even an attempted compromise, would likely be dire, not only for Britain itself, but also for its ties to the Commonwealth. As the Queen's closest advisers continue their attempts to convince her, the public awaits with bated breath the resolution of this conflict between the Queen and her cabinet."
+ mtg_britain.1.d:2 "For some time Queen Orange Pekoe has entertained hopes to marry the Saunders Kilimanjaro. A constitutional crisis has now arisen as Ms. Kilimanjaro is not only divorced from her previous wife, but in point of fact still married to her current wife, presently pursuing a second divorce. General outrage has ensued on the grounds that, as Queen, and being the head of the Church of Gloriana, Orange Pekoe cannot marry a divorcée.\n\nThe Queen, however, has made it abundantly clear that she is very much in love with Ms. Kilimanjaro, and intends to marry her regardless of the opinions of her governments or her subjects. As such, only three options remain open to her.\n\nThe Gloriana government and the governments of the Dominions have already stated that any alternative to abdication would be unacceptable, and repercussions of trying to force through a marriage, even an attempted compromise, would likely be dire, not only for St Gloriana itself, but also for its ties to the Commonwealth. As the Queen's closest advisers continue their attempts to convince her, the public awaits with bated breath the resolution of this conflict between the Queen and her cabinet."
  mtg_britain.1.a:2 "Insist on a royal marriage."
  mtg_britain.1_tt:2 "Begin preparations for the marriage.\n"
  mtg_britain.1.b:0 "Compromise on a morganatic marriage."
@@ -623,7 +623,7 @@
  mtg_britain.16.t:1 "Orange Pekoe Pushes Ahead for Marriage"
  mtg_britain.16.d:1 "As we feared, Queen Orange Pekoe has decided to go ahead with the marriage to Kilimanjaro, now known as Wallis, Duchess of Windsor."
  mtg_britain.16.a:1 "Then we must break with the Crown."
- mtg_britain.17.t:1 "Guided by Britain"
+ mtg_britain.17.t:1 "Guided by St Gloriana"
  mtg_britain.17.d:1 "In an effort to prepare us for independence, [ENG.GetNameDef] has decided to guide us during our transition. We will be able to rely upon their support until we stand on our own two feet."
  mtg_britain.17.a:1 "Let us make the most of their help."
  mtg_britain.18.t:1 "Towards Dominion Independence"
@@ -716,7 +716,7 @@
  mtg_britain.48.t:1 "[From.GetName] Refuses Demands"
  mtg_britain.48.d:1 "[From.GetNameDefCap] refused our demands to decolonize."
  mtg_britain.48.a:1 "War it is, then."
- mtg_britain.49.t:1 "Britain Suggests Cooperation"
+ mtg_britain.49.t:1 "St Gloriana Suggests Cooperation"
  mtg_britain.49.d:1 "[From.GetNameDefCap] suggest a cooperation with attacking [GER.GetNameDef] from two directions. Assuming they hold up to their end of the bargain and start a second front swiftly, this may be an excellent opportunity."
  mtg_britain.49.a:1 "A great idea - let us do it."
  mtg_britain.49.b:1 "This seems suicidal. We better wait it out."
@@ -767,14 +767,14 @@
  mtg_britain.65.t:1 "[From.GetName] Replaces Government"
  mtg_britain.65.d:1 "[From.GetNameDefCap], with the support of our people, has now disbanded our government altogether, and called for new elections. These have been nothing but a farce, with a loyalist government winning a landslide victory."
  mtg_britain.65.a:1 "How dare th-- I mean, Rule Britannia!"
- mtg_britain.66.t:1 "Loyalties to Britain"
+ mtg_britain.66.t:1 "Loyalties to St Gloriana"
  mtg_britain.66.d:1 "The [From.GetAdjective] government has undergone tremendous political changes. We must decide whether to remain loyal now that our ideological views are so different."
  mtg_britain.66.a:1 "We see nothing wrong with this state of affairs."
  mtg_britain.66.b:1 "This is unacceptable! We will declare independence!"
  mtg_britain.67.t:1 "[From.GetName] Proclaims Independence"
  mtg_britain.67.d:1 "[From.GetNameDefCap] has informed us that they cannot agree with the ideological path we have chosen, and that therefore they see no other option but to secede from the Empire."
  mtg_britain.67.a:1 "We shall see how long that lasts."
- ENG_dominions_stayed_with_fascist_britain_flag:1 "Stayed with Fascist Britain."
+ ENG_dominions_stayed_with_fascist_britain_flag:1 "Stayed with Fascist St Gloriana."
  mtg_britain.68.t:2 "Communism in Maple"
  mtg_britain.68.d:1 "[ENG.GetNameDefCap] is forcing through a Communist government in [FROM.GetNameDef]. We surely cannot allow such an ideological threat to appear on our very border?!"
  mtg_britain.68.a:1 "We will strongly object."
@@ -1412,7 +1412,7 @@
  MTG_naval_treaty.8.b:0 "We made the right choice."
  MTG_naval_treaty.8.c:0 "Is this the beginning of a new Dreadnought Race?"
  MTG_naval_treaty.9.t:0 "Second London Naval Treaty signed"
- MTG_naval_treaty.9.desc:0 "Delegations from Britain, BC Freedom, Anzio, Chi-ha-tan and the US met in December of 1935 to discuss a renewal of the First London Naval treaty, which restricted the number and size of cruisers and submarines. Negotiations turned quite heated over Anzio's war in Konjo and Chi-ha-tan's desire to be seen as equal to Britain and the US.\n\nWith negotiations now at an end, the signatory nations have agreed on limits to the size of battleships and aircraft carriers in the hopes of preventing another ruinous arms race."
+ MTG_naval_treaty.9.desc:0 "Delegations from St Gloriana, BC Freedom, Anzio, Chi-ha-tan and the US met in December of 1935 to discuss a renewal of the First London Naval treaty, which restricted the number and size of cruisers and submarines. Negotiations turned quite heated over Anzio's war in Konjo and Chi-ha-tan's desire to be seen as equal to St Gloriana and the US.\n\nWith negotiations now at an end, the signatory nations have agreed on limits to the size of battleships and aircraft carriers in the hopes of preventing another ruinous arms race."
  MTG_naval_treaty.9.a:0 "This will safeguard peace better than any Super-Battleship!"
  MTG_naval_treaty.9.b:0 "Why would they restrict themselves like this?"
  MTG_naval_treaty.9.c:0 "More money for the army, then."
