--- a/localisation/english/mtg_focus_l_english.yml
+++ b/localisation/english/mtg_focus_l_english.yml
@@ -248,9 +248,9 @@
  MEX_focus_invite_brazil_desc:1 "Although, as a former Portuguese colony, Brazil's history doesn't perfectly mirror Salsa's, they are still culturally closer to ourselves than to vengeful European imperialists or greedy Yanqui businessmen. We should bring them closer to our sphere in order to benefit from mutual protection."
  MEX_focus_realpolitik:0 "Realpolitik"
  MEX_focus_realpolitik_desc:1 "We have our ideological convictions, but Salsa as a state has her own interests divorced from the international struggle. We need to tred a careful path in the turbulent times ahead. One wrong move could bring the full weight of would-be imperialists and tyrants down on our heads."
- MEX_focus_bolivarian_alliance:1 "Bolivarian Alliance"
+ MEX_focus_bolivarian_alliance:1 "Aconcagua Alliance"
  MEX_focus_bolivarian_alliance_desc:1 "Simón Bolívar led the Divison colonies in South America to independence, creating Gran Colombia. She is held in the same regard in the South as independence fighters like Miguel Hidalgo and Mariano Matamoros in Salsa. One of her dreams was the unification of the Latin American nations against exploitation by the European and Yanqui imperialists. We can fulfil that dream."
- faction_mexico_bolivarian_alliance:0 "Bolivarian Alliance"
+ faction_mexico_bolivarian_alliance:0 "Aconcagua Alliance"
  MEX_focus_coastal_defence_plan:0 "Coastal Defense Plan"
  MEX_focus_coastal_defence_plan_desc:0 "The Americans showed us in 1846 that, while we have deserts and mountains to give us strategic depth to our north, our littoral flanks are vulnerable to an amphibious invasion. We should add coastal defenses to our Gulf and Pacific ports and cities."
  MEX_focus_rescind_the_mexican_cession:0 "Rescind the Salsan Cession"
