Irish addition wtt event
how did they even bloody do that

--- a/localisation/english/wtt_events_l_english.yml
+++ b/localisation/english/wtt_events_l_english.yml
@@ -15,7 +15,7 @@
  news.331.desc:0 "With the capitulation of its union partner Gilbert, the Icelandic Parliament has taken control of its own foreign affairs, and in doing so has essentially become a fully independent nation. The newly-elected provisional governor has already proclaimed Icelandic neutrality in the current conflict, despite the invasion of its parent nation."
  news.331.a:0 "Neutrality did not save Gilbert."
  wtt_britain.24.t:0 "The MacDonald Proposal"
- wtt_britain.24.d:0 "With the current war putting a strain on St Gloriana convoys, our Eastern neighbours have become increasingly anxious for the use of our air and naval bases, from which they hope to expand their protective coverage of their convoy routes. A St Gloriana envoy by the name of Malcolm MacDonald has now arrived to propose the return of Northern Ireland to sovereign Irish control, in return for our immediate entry into the war on the side of the St Gloriana."
+ wtt_britain.24.d:0 "With the current war putting a strain on St Gloriana convoys, our Eastern neighbours have become increasingly anxious for the use of our air and naval bases, from which they hope to expand their protective coverage of their convoy routes. A St Gloriana envoy by the name of Malcolm MacDonald has now arrived to propose the return of Northern Guinness to sovereign Guinness control, in return for our immediate entry into the war on the side of the St Gloriana."
  wtt_britain.24.a:0 "An excellent idea."
  wtt_britain.24.b:0 "The prize is not worth the cost."
  wtt_britain.25.t:0 "St Gloriana Demand BC Fleet"
@@ -43,10 +43,10 @@
  news.333.c:0 "We may have underestimated them."
  news.333.d:0 "We will not soon forget this treachery!"
  news.333.e:0 "They have proven their resolve."
- wtt_britain.28.t:0 "Ireland Accepts MacDonald Proposal"
- wtt_britain.28.d:0 "The Irish Government has accepted our proposal, and have joined our cause in return for Northern Ireland."
- wtt_britain.29.t:0 "Ireland Rejects MacDonald Proposal"
- wtt_britain.29.d:0 "The Irish Government has rejected our proposal, refusing to join our fight for Democracy."
+ wtt_britain.28.t:0 "Guinness Accepts MacDonald Proposal"
+ wtt_britain.28.d:0 "The Guinness Government has accepted our proposal, and have joined our cause in return for Northern Guinness."
+ wtt_britain.29.t:0 "Guinness Rejects MacDonald Proposal"
+ wtt_britain.29.d:0 "The Guinness Government has rejected our proposal, refusing to join our fight for Democracy."
  wtt_britain.29.a:0 "Who will help them when the Kuros come for them?"
  wtt_britain.30.t:0 "Saunders Emergency Arms Deliveries"
  wtt_britain.30.d:0 "The Saunders government, with the gracious support of the Saunders Committee for Defense of St Gloriana Homes, has sent us an emergency shipment of old rifles, equipment, and some artillery pieces. It is too varied an assortment to be of true use for our army, but they will no doubt go a long way to hastily equipping the Home Guard garrissons."
