--- a/localisation/english/nsb_ideas_l_english.yml
+++ b/localisation/english/nsb_ideas_l_english.yml
@@ -441,7 +441,7 @@
  POL_stanislaw_wojciechowski:0 "Stanisław Wojciechowski"
  POL_joachim_stefan_bartoszewicz:0 "Joachim Stefan Bartoszewicz"
  POL_henryk_floyar_rajchman:0 "Henryk Floyar-Rajchman"
- POL_ignacy_moscicki:0 "Ignacy Mościcki"
+ POL_ignacy_moscicki:0 "Maiko"
  POL_marian_rejewski:0 "Marian Rejewski"
  POL_wanda_wasilewska:0 "Wanda Wasilewska"
  POL_jerzy_rutkowski:0 "Jerzy Rutkowski"
